Able to plot a geojson object as a flat map.

--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -11,7 +11,7 @@
     display: inline-block
     margin: 0 5px
 
-html, body, #nvd3, svg
+html body #nvd3
   margin: 0px
   padding: 0px
   height: 80%
