Load data from ThingSpeak and display :godmode: Also, fix scales and some refactoring along the way.

--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -16,3 +16,9 @@ html body #nvd3
   padding: 0px
   height: 80%
   width: 100%
+
+.fp_humidity, .fp_temperature
+  fill: black
+
+.fp_temperature
+  stroke: #fff
