--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -22,3 +22,16 @@ html body #nvd3
 
 .fp_temperature
   stroke: #fff
+  pointer-events: none
+
+div.tooltip
+  position: absolute
+  text-align: center
+  width: 60px
+  height: 28px
+  padding: 2px
+  font: 12px sans-serif
+  background: white
+  border: 0px
+  border-radius: 8px
+  pointer-events: none
