Improved view and formatting + refactoring :cop:

--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -29,3 +29,6 @@ div.tooltip
   border: 0px
   border-radius: 8px
   pointer-events: none
+
+.nvd3 .nv-axis .nv-axisMaxMin text
+  font-weight: normal
