Floor titles added. Use real channels (still need to enter metadata).

--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -18,6 +18,10 @@
   stroke: #fff
   pointer-events: none
 
+.floor_title
+  font-size: 20px
+  font-weight: bold
+
 div.tooltip
   position: absolute
   text-align: center
