--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -2,6 +2,16 @@
 @import typography
 @import icons
 
+h1
+  display: inline-block
+
+aside
+  font-size: small
+  right: 0
+  position: absolute
+  width: 180px
+  display: inline-block
+
 .social-icons
   h4
     display: inline-block
