Layout improvements Note: lots of magic numbers :worried:

--- a/web/site/src/sass/app.sass
+++ b/web/site/src/sass/app.sass
@@ -46,3 +46,7 @@ div.tooltip
 
 .nvd3 .nv-axis .nv-axisMaxMin text
   font-weight: normal
+
+.mini_chart_title
+  font-size: 12px
+  text-anchor: middle
